bug fix and finished the desctop version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
 
     <!--connecting style file-->
-    <link rel="stylesheet" href="/styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <!--connecting font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -363,6 +363,6 @@
         </div>
       </div>
     </footer>
-    <script src="main .js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
