starting mobile layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!--connecting style file-->
     <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="stylesheet" href="./styles/mobile_version/main.css" />
+
     <!--connecting font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -54,7 +56,7 @@
           <img
             src="./image/page_design/frameNoteBook.png"
             alt="image"
-            class="design-design__image"
+            class="design-section__image"
           />
         </div>
         <!--container block with content and button--------------------------->
