finish decktop & mobile version

--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
 
     <!--connecting style file-->
     <link rel="stylesheet" href="./styles/main.css" />
-<<<<<<< HEAD
-    <link rel="stylesheet" href="./styles/mobile_version/main.css" />
-
-=======
->>>>>>> testWorkspace
     <!--connecting font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -68,9 +63,9 @@
           <h1 class="design-section__title">Дизайн и верстка</h1>
           <!--text------------------------------------------------------->
           <p class="design-section__text">
-            Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
-            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
-            на латинице с начала XVI века.
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
           </p>
           <!--button---------------------------------------------->
           <button class="design-section__button button-repeat" type="button">
@@ -89,9 +84,9 @@
         <div class="about-section__text-container text-title-repeat">
           <h2 class="about-section__title title-repeat">Обо мне</h2>
           <p class="about-section__text text-repeat">
-            Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
-            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
-            на латинице с начала XVI века.
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
           </p>
         </div>
         <!--container with blue band and six images----------------------------------->
@@ -172,9 +167,9 @@
         <div class="work-section__text-container text-title-repeat">
           <h2 class="work-section__title title-repeat">Как я работаю</h2>
           <p class="work-section__text text-repeat">
-            Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
-            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов<br />
-            на латинице с начала XVI века.
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
           </p>
         </div>
       </div>
@@ -308,9 +303,8 @@
           <div class="form-section__text-container text-title-repeat">
             <h2 class="form-section__title title-repeat">Хотите веб-сайт?</h2>
             <p class="form-section__text text-repeat">
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и<br />
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для
-              текстов<br />
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
               на латинице с начала XVI века.
             </p>
           </div>
@@ -336,7 +330,7 @@
             type="submit"
             class="form-section__button-submit button-repeat"
           >
-            Отправить
+            ОТПРАВИТЬ
           </button>
         </form>
       </div>
