--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
         <div class="about-section__content-container">
           <div class="about-section__skills-container">
             <!--title my skills--------------------------------->
-            <h3 class="about-section__title">Мои навыки</h3>
+            <h3 class="about-section__sub-title">Мои навыки</h3>
             <!--first block text and blue/grey line-->
             <div class="about-section__line-container">
-              <p class="about-section__text">Adobe Photoshop</p>
+              <p class="about-section__sub-text">Adobe Photoshop</p>
               <div class="about-section__blue-line"></div>
               <div class="about-section__grey-line"></div>
             </div>
             <!--second block text and blue/grey line-->
             <div class="about-section__line-container">
-              <p class="about-section__text">Adobe Photoshop</p>
+              <p class="about-section__sub-text">Adobe Photoshop</p>
               <div class="about-section__blue-line"></div>
               <div class="about-section__grey-line"></div>
             </div>
             <!--third block text and blue/grey line-->
             <div class="about-section__line-container">
-              <p class="about-section__text">Adobe Photoshop</p>
+              <p class="about-section__sub-text">Adobe Photoshop</p>
               <div class="about-section__blue-line"></div>
               <div class="about-section__grey-line"></div>
             </div>
