--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-
-    <!--connecting style file-->
+    <!--connecting style file---------------------------------------------->
     <link rel="stylesheet" href="./styles/main.css" />
-    <!--connecting font-->
+    <!--connecting font-------------------------------------------------->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -44,7 +43,6 @@
         </nav>
       </div>
     </header>
-    <!-------------------------------------------------------------------------------------------------->
     <!--beginning of the design and layout section-------------------------------------------------->
     <section class="design-section">
       <!--wrapper main block with image title text button------------------------------>
@@ -74,8 +72,6 @@
         </div>
       </div>
     </section>
-    <!--section about_me--------------------------------------------------------------->
-
     <!--section about_me--------------------------------------------------------------->
     <section class="about-section">
       <!--wrapper section about_me------------------------------------------>
@@ -160,7 +156,6 @@
       </div>
     </section>
     <!--section how i work=========================================================================-->
-    <!--====================================================================================-->
     <section class="work-section">
       <!--container contents=======================================-->
       <div class="work-section__container">
@@ -187,13 +182,6 @@
       </div>
     </section>
     <!--section with photo=========================================================-->
-    <!--======================================================================================-->
-    <!--=
-        =
-        ==
-        ==
-              ==-->
-    <!--====================================================================================-->
     <section class="photo-section">
       <!--container 8 photo---------------------------------------------->
       <div class="photo-section__container">
@@ -336,7 +324,6 @@
       </div>
     </section>
     <!--footer===========================================================-->
-    <!--=======================================================================-->
     <footer class="page-footer">
       <div class="page-footer__container">
         <div class="page-footer__text">
