--- a/index.html
+++ b/index.html
@@ -310,10 +310,11 @@
               class="form-section__input-email input-repeat"
             />
           </div>
-          <textarea type="text" class="form-section__input-textarea">
-            Сообщение
-            </textarea
-          >
+          <textarea
+            type="text"
+            class="form-section__input-textarea"
+            placeholder="Ваше сообщение"
+          ></textarea>
           <button
             type="submit"
             class="form-section__button-submit button-repeat"
