--- a/index.html
+++ b/index.html
@@ -89,36 +89,72 @@
         <div class="about-section__blue-band-container">
           <!--container for images--------------------------------->
           <div class="about-section__image-container">
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
-            <img
-              src="./image/page_about_me/item.png"
-              alt="image"
-              class="about-section__image"
-            />
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
+            <div class="about-section__block-image">
+              <img
+                src="./image/page_about_me/project.png"
+                alt="image"
+                class="about-section__image"
+              />
+              <div class="about-section__block-counter">
+                <p>40+</p>
+                <p>ПРОЕКТОВ</p>
+              </div>
+            </div>
           </div>
         </div>
         <!--container with my skills-------------------------------------------->
@@ -129,20 +165,23 @@
             <!--first block text and blue/grey line-->
             <div class="about-section__line-container">
               <p class="about-section__sub-text">Adobe Photoshop</p>
-              <div class="about-section__blue-line"></div>
-              <div class="about-section__grey-line"></div>
+              <div class="about-section__grey-line">
+                <div class="about-section__blue-line"></div>
+              </div>
             </div>
             <!--second block text and blue/grey line-->
             <div class="about-section__line-container">
               <p class="about-section__sub-text">Adobe Photoshop</p>
-              <div class="about-section__blue-line"></div>
-              <div class="about-section__grey-line"></div>
+              <div class="about-section__grey-line">
+                <div class="about-section__blue-line"></div>
+              </div>
             </div>
             <!--third block text and blue/grey line-->
             <div class="about-section__line-container">
               <p class="about-section__sub-text">Adobe Photoshop</p>
-              <div class="about-section__blue-line"></div>
-              <div class="about-section__grey-line"></div>
+              <div class="about-section__grey-line">
+                <div class="about-section__blue-line"></div>
+              </div>
             </div>
           </div>
           <div class="about-section__photo-container">
